# covscript-database

./: .gitignore  CMakeLists.txt  README.md  database.cpp  mysql_ext.csp
csbuild/: database.json  make.bat  make.sh
csdbc/: csdbc_mysql.csp  csdbc_sqlite.csp
nanodbc/: nanodbc.cpp
tests/: ds_config_template.json  test.csp  test_insert.csc  test_repl.csc
tools/: data_migrate.csc
